# sdm72dc

./: .gitignore  CMakeLists.txt  README.md  arm.cmake  deploy.sh
src/: conf.c  conf.h  ieee754.c  ieee754.h  main.c  mqtt.c  mqtt.h  reg.c  reg.h  util.c  util.h
